Fix jumping of sidebar links.

--- a/app/assets/sass/partials/_sidebar.scss
+++ b/app/assets/sass/partials/_sidebar.scss
@@ -74,7 +74,6 @@ body.dashboard {
                     a {
                         display: block;
                         padding: 15px;
-                        border-top: $sidebar-border-color;
                         color: $sidebar-text-color;
                         i {
                             font-size: 18px;
